# new-world-stamina-checker

./: .dockerignore  .gitignore  CHANGELOG.txt  Dockerfile  README.md  bot.py  colorCheck.py  debug.py  level_roles.json  logger.py  pyproject.toml  t.py  test.py  videoAnalyzer.py
.devcontainer/: Dockerfile.dev
.github/workflows/: docker-publish.yml
src/: bot.py  colorCheck.py  jsonFileManager.py  logger.py  textExtract.py  videoAnalyzer.py  videoAnalyzerOld.py  vodReviewView.py
src/spreadsheet/: authenticate.py  memberlist.py  payoutlist.py  stats.py  urlaub.py
tests/: conftest.py
tests/integration/: sample_list.py  test_analyze.py
