[project]
name = "new-world-stamina-checker"
version = "0.1.0"
description = "scan the ah with this tool for saving prices"
authors = [{ name = "Katze719" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["yt-dlp (>=2025.1.26,<2026.0.0)", "opencv-python (>=4.11.0.86,<5.0.0.0)", "pytesseract (>=0.3.13,<0.4.0)", "numpy (>=2.2.2,<3.0.0)", "discord (>=2.3.2,<3.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
