[project]
name = "new-world-stamina-checker"
version = "0.1.0"
description = "scan the ah with this tool for saving prices"
authors = [{ name = "Katze719" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp (>=2025.1.26,<2026.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "discord (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "google-genai (>=1.0.0,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)",
    "gspread (>=6.0.0,<7.0.0)",
    "google-api-python-client (>=2.163.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "pydrive2 (>=1.21.3,<2.0.0)",
    "gspread-asyncio (>=2.0.0,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
testpaths = ["tests"]
